# EDULITE_A3

./: .clangd  .gitignore
el_a3_ros/EDULITE-A3/: EDULITE-A3.urdf  config.json
el_a3_ros/EDULITE-A3/meshes/: el05_l6.part  jaw.part  l1.part  l1.stl  l2.part  l3.part  l4.part  l5.part  l6.part  l6.stl
el_a3_ros/el_a3_description/meshes/: jaw.stl  l2.stl  l4.stl
el_a3_ros/el_a3_description/urdf/: el_a3.urdf  el_a3.urdf.xacro  el_a3_ros2_control.xacro
el_a3_ros/el_a3_hardware/: .clangd  CMakeLists.txt
el_a3_ros/el_a3_moveit_config/config/: joint_limits.yaml
el_a3_ros/scripts/: install_deps.sh
el_a3_sdk/debugger/: main.py  main_window.py
el_a3_sdk/debugger/utils/: i18n.py
el_a3_sdk/el_a3_sdk/: interface.py
el_a3_sdk/resources/meshes/: el05_l6.stl  l3.stl  l5.stl
